[gd_scene load_steps=9 format=2]

[ext_resource path="res://godot_fontpack/Godot-Fontpack-master/fonts/droid-sans/DroidSans.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://godot_fontpack/Godot-Fontpack-master/fonts/architect-s-daughter/ArchitectsDaughter.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://normal_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://upload_result.gd" type="Script" id=4]
[ext_resource path="res://maps/practice_001.tres" type="Resource" id=6]

[sub_resource type="DynamicFont" id=1]
size = 41
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 27
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[node name="UploadResultScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
map = ExtResource( 6 )
result_name = "Kjell"
time = 234

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 72.0

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer"]
margin_left = 357.0
margin_right = 667.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "Upload Result"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 1024.0
margin_bottom = 116.0
custom_constants/margin_top = 40

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 1024.0
margin_bottom = 225.0
custom_fonts/font = SubResource( 2 )
text = "In orientering you are supposed to compete on a map and terrain that you have not seen before! Competing on a map that you already know is considered to be cheating. Please don't upload the result if you have seen the map before!"
autowrap = true

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_top = 229.0
margin_right = 1024.0
margin_bottom = 269.0
custom_constants/margin_top = 40

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer"]
margin_top = 273.0
margin_right = 1024.0
margin_bottom = 308.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer3"]
margin_left = 330.0
margin_right = 694.0
margin_bottom = 35.0

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer3/HBoxContainer"]
margin_top = 5.0
margin_right = 160.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "Type your name: "

[node name="NameLineEdit" type="LineEdit" parent="VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 164.0
margin_right = 364.0
margin_bottom = 35.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 312.0
margin_right = 1024.0
margin_bottom = 352.0
custom_constants/margin_top = 40

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 356.0
margin_right = 1024.0
margin_bottom = 387.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/CenterContainer2"]
margin_left = 442.0
margin_right = 581.0
margin_bottom = 31.0

[node name="Button" type="Button" parent="VBoxContainer/CenterContainer2/HBoxContainer2"]
margin_right = 56.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 3 )
text = "Back"

[node name="Button2" type="Button" parent="VBoxContainer/CenterContainer2/HBoxContainer2"]
margin_left = 60.0
margin_right = 139.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 3 )
text = "Upload"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="TypeNameDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -183.5
margin_top = -83.5
margin_right = 183.5
margin_bottom = 83.5
window_title = "Please type a name"

[node name="Label2" type="Label" parent="TypeNameDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 359.0
margin_bottom = 131.0
text = "Please type a name to upload the result"
autowrap = true

[node name="UploadingPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="UploadingPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UploadingPanel/CenterContainer"]
margin_left = 474.0
margin_top = 293.0
margin_right = 550.0
margin_bottom = 307.0
text = "Uploading..."
[connection signal="pressed" from="VBoxContainer/CenterContainer2/HBoxContainer2/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/HBoxContainer2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
